No character based widths to prevent layout shift

--- a/src/scss/objects/_grid.scss
+++ b/src/scss/objects/_grid.scss
@@ -16,7 +16,7 @@
     ========================================================================= */
 
 .o-grid {
-  --main-size: 65ch;
+  --main-size: 30em;
   display: grid;
   grid-template-columns:
     [full-start] minmax(#{space.get('base')}, 2fr)
